--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <title>Gwalior web map</title>
 <body >
   <p>
-    <div class = "container"><h1><center>GWALIOR WEB MAP</center></h1>
+    <div class = "container"><h1><center>JIWAJI WEB MAP</center></h1>
     </div></p>
     <style>
    h1{
